--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+web_frameworks/portfolio_server/database.csv
+web_frameworks/portfolio_server/database.txt
